--- a/Javascript/contact.html
+++ b/Javascript/contact.html
@@ -5,7 +5,7 @@
 
 	<title>Home Page </title>
 	<meta charset="utf-8">
-    <link rel="stylesheet" href="elie/style.css">
+    <link rel="stylesheet" href="Elie/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  </head>
 
