--- a/Javascript/Testopic.html
+++ b/Javascript/Testopic.html
@@ -16,7 +16,7 @@
 
         <div class="Navigation">
 
-            <img id='logo' src="img/Logo.png" alt="logo">
+            <img id='logo' src="img/logo.png" alt="logo">
             
             <a href="index.html">Home</a>
             <a href="rumors.html">Rumors of the day</a>
