--- a/Javascript/Testopic.html
+++ b/Javascript/Testopic.html
@@ -40,7 +40,7 @@
                 <ul class="topic-list">
 
                     <div class="test1">
-                        <a href="index.html" class="Back">Back</a>
+                        <a href="forum.html" class="Back">Back</a>
                         <a onclick="one()" class="Addnew" href="#bloc-form"> Add a reply</a>
                     </div>
 
